[gd_scene load_steps=15 format=3 uid="uid://ddkh7hj8etv2l"]

[ext_resource type="PackedScene" uid="uid://ck0o1johp1beh" path="res://templates/character_base.tscn" id="1_o86wx"]
[ext_resource type="Script" path="res://scripts/fake_player.gd" id="2_bnnhh"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="2_t6v0d"]
[ext_resource type="SpriteFrames" uid="uid://xukc4wy64q54" path="res://other/player_sprite_frames.tres" id="2_v0gpv"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence_star.gd" id="3_do5g3"]
[ext_resource type="Script" path="res://scripts/behaviors/actions/is_enemy_in_sight.gd" id="4_pfc8f"]
[ext_resource type="Script" path="res://scripts/behaviors/actions/wait_seconds.gd" id="5_t5nph"]
[ext_resource type="Script" path="res://scripts/behaviors/actions/shoot_closest_enemy.gd" id="6_ocwf3"]
[ext_resource type="Script" path="res://addons/beehave/nodes/decorators/inverter.gd" id="7_6wlqp"]
[ext_resource type="Script" path="res://scripts/behaviors/actions/move_towards_target.gd" id="8_fr2y8"]
[ext_resource type="Script" path="res://scripts/behaviors/actions/move_towards_node.gd" id="9_u8kx3"]
[ext_resource type="Script" path="res://scripts/vision_cone.gd" id="11_ltmra"]
[ext_resource type="Script" path="res://scripts/player_debug_controls.gd" id="12_vftbo"]
[ext_resource type="PackedScene" uid="uid://66l0v7vali28" path="res://templates/health_bar.tscn" id="14_hu7u1"]

[node name="FakePlayer" instance=ExtResource("1_o86wx")]
script = ExtResource("2_bnnhh")
ammo_start = 1000
health_start = 1000
speed = null

[node name="CollisionPolygon2D" parent="." index="0"]
position = Vector2(0, 14)

[node name="Sprite" parent="." index="1"]
frames = ExtResource("2_v0gpv")

[node name="MachineGunWeapon" parent="." index="3"]
shoot_interval_msec = 50.0
shoot_randomness = 50.0
damage = 10

[node name="Either" type="Node" parent="BehaviourAI" index="0"]
script = ExtResource("2_t6v0d")

[node name="ClearEnemies" type="Node" parent="BehaviourAI/Either" index="0"]
script = ExtResource("3_do5g3")

[node name="IsEnemyInSight" type="Node" parent="BehaviourAI/Either/ClearEnemies" index="0"]
script = ExtResource("4_pfc8f")

[node name="ShootEnemies" type="Node" parent="BehaviourAI/Either/ClearEnemies" index="1"]
script = ExtResource("3_do5g3")

[node name="ReactionWait" type="Node" parent="BehaviourAI/Either/ClearEnemies/ShootEnemies" index="0"]
script = ExtResource("5_t5nph")
wait_in_seconds = 0.2

[node name="ShootClosestEnemy" type="Node" parent="BehaviourAI/Either/ClearEnemies/ShootEnemies" index="1"]
script = ExtResource("6_ocwf3")

[node name="WaitSeconds" type="Node" parent="BehaviourAI/Either/ClearEnemies/ShootEnemies" index="2"]
script = ExtResource("5_t5nph")
wait_in_seconds = 0.5

[node name="CanMoveToTarget" type="Node" parent="BehaviourAI/Either" index="1"]
script = ExtResource("7_6wlqp")

[node name="MoveToTarget" type="Node" parent="BehaviourAI/Either/CanMoveToTarget" index="0"]
script = ExtResource("3_do5g3")

[node name="MoveTowardsTarget" type="Node" parent="BehaviourAI/Either/CanMoveToTarget/MoveToTarget" index="0"]
unique_name_in_owner = true
script = ExtResource("8_fr2y8")
distance_threshold = 20
destination = NodePath("")

[node name="WaitSeconds" type="Node" parent="BehaviourAI/Either/CanMoveToTarget/MoveToTarget" index="1"]
script = ExtResource("5_t5nph")
wait_in_seconds = 1.0

[node name="MoveTowardsLevelEnd" type="Node" parent="BehaviourAI/Either" index="2"]
unique_name_in_owner = true
script = ExtResource("9_u8kx3")
distance_threshold = 20

[node name="CollisionShape2D" parent="VisibilityArea" index="0"]
visible = true

[node name="VisionCone" type="Node2D" parent="." index="6"]
script = ExtResource("11_ltmra")
collision_layer_mask = 2
debug_shape = true

[node name="PlayerDebugControls" type="Node2D" parent="." index="7"]
position = Vector2(-5, 2)
script = ExtResource("12_vftbo")

[node name="AmmoBar" parent="." index="8" instance=ExtResource("14_hu7u1")]
position = Vector2(0, 7)

[node name="Full" parent="AmmoBar" index="0"]
animation = &"yellow"

[connection signal="ammo_updated" from="." to="AmmoBar" method="_on_character_health_updated"]

[editable path="AmmoBar"]
